add new configuration, font upload, color functionality tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
             "sourceMap": true,
             "resolveJsonModule": true,
             "types": [
-                "node", "jest", "@testing-library/jest-dom"
+                "node"
                  
             ],
             "baseUrl": ".",
