--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,12 @@ steps:
     npm install
     npm run test
   displayName: 'npm install and test'
-  publishJUnitResults: true
-  testResultsFiles: '**/surefire-reports/TEST-*.xml'
-  goals: 'package'
+
+
+#Your build pipeline references an undefined variable named ‘Parameters.reportDir’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab. See https://go.microsoft.com/fwlink/?linkid=865972
+
+steps:
+- task: JakubRumpca.azure-pipelines-html-report.PublishHtmlReport.PublishHtmlReport@1
+  displayName: 'Publish Html Report'
+  inputs:
+    reportDir: '$(Parameters.reportDir)'
