--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.27.1",    
+    "@playwright/test": "^1.28.1",
+    "allure-commandline": "^2.18.1",
+    "allure-playwright": "^2.0.0-beta.20",
     "clipboardy": "^2.3.0",
     "fs": "^0.0.1-security",
     "ts-node": "10.9.1",
-    "typescript": "4.8.3",
-    "allure-commandline": "^2.18.1",
-    "allure-playwright": "^2.0.0-beta.15"
+    "typescript": "4.8.3"
   }
 }
