--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    targetFolder: 'playwright-report/index.html'    
+    targetFolder: '$(Build.ArtifactStagingDirectory)'    
 
 - task: PublishBuildArtifacts@1    
   displayName: 'Publish Artifact: drop'
