Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,3 +24,7 @@ jobs:
         artifact: playwright-report
         # always create the artifact, this is useful for debugging failed tests
         condition: always()
+        
+    displayName: 'Publish HTML Report'
+    inputs:
+      reportDir: '$(ResultsPath)/reportName.html'
