--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ jobs:
         displayName: "Run Playwright tests"
       - publish: $(System.DefaultWorkingDirectory)/playwright-report
         artifact: playwright-report
+        continueOnError: true
         # always create the artifact, this is useful for debugging failed tests
         condition: always()
         
