Updated Base Function

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,11 @@
                     "testData/images/*",
                     "testData/videos*"
                     
+                ],
+                "@base-function/*": [
+                    "base-function/*"
+                    
+                    
                 ]
             }
         }
