--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.27.1",
+    "@playwright/test": "^1.29.1",
     "allure-commandline": "^2.18.1",
     "allure-playwright": "^2.0.0-beta.19",
     "clipboardy": "^2.3.0",
@@ -20,6 +20,7 @@
     "ts-node": "10.9.1",
     "typescript": "4.8.3",
     "lighthouse": "^9.6.8",
+    "playwright": "^1.29.1",
     "playwright-lighthouse": "^2.2.2"
   },
   "dependencies": {
