--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "allure-playwright": "^2.0.0-beta.19",
     "clipboardy": "^2.3.0",
     "fs": "^0.0.1-security",
-    "playwright-slack-report": "^1.0.19",
-    "ts-node": "10.9.1",
-    "typescript": "4.8.3",
-    "lighthouse": "^9.6.8",
+    "lighthouse": "^2.1.0",
     "playwright": "^1.29.1",
-    "playwright-lighthouse": "^2.2.2"
+    "playwright-lighthouse": "^2.2.2",
+    "playwright-slack-report": "^1.0.19",
+    "tesseract.js": "^2.1.5",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.3"
   },
   "dependencies": {
     "@zen-qa/playwright.slack.reporter": "^1.0.2",
