Updated Signup Page

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx playwright test",
-    "allure:generate": "allure generate ./allure-results --clean && allure open ./allure-report"
+    "allure:generate": "allure generate ./allure-results --clean && allure open ./allure-report",
+    "update:Snapshot": "npx playwright test --update-snapshots"
   },
   "keywords": [],
   "author": "",
