--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@zen-qa/playwright.slack.reporter": "^1.0.2",
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "nodemailer": "^6.8.0",
     "test-results-reporter": "^1.0.15"
